Fix alignment of images on Features page

--- a/css/less/pages.less
+++ b/css/less/pages.less
@@ -248,10 +248,15 @@
 	}
 }
 
-.feature-75247 img { margin-left: 15%; }
+.feature-75247 img {
+	margin-left: 15%;
+	margin-top: 2%;
+}
 
 .feature-75248 img,
 .feature-75250 img { margin-right: 20%; }
+
+.feature-75248 img { margin-top: 3.5%; }
 
 .feature-75253 img {
 	margin-top: 5%;
@@ -259,9 +264,12 @@
 
 .feature-75252 img {
 	position: relative;
-	top: 40px;
+	top: 0;
 	position: relative;
+}
 
+.feature-75254 img {
+	margin-left: 9.5%;
 }
 
 #feature-edd {
